# simstack4

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT_three_component_graybody_1.md  PER_BIN_OPTIMIZATION_PROGRESS.md  README.md  REFACTOR_CONTEXT.md  REMOTE_CONTEXT_cigale_survey.md  benchmark_per_bin_inner_loop.py  debug_config.py  dir_printer.py  main.py  pyproject.toml  setup_script.sh  test_catalog_loading.py
.claude/skills/pah-forward-model/: SKILL.md
config/: cosmos20.toml  cosmos20_PAH_dithered.toml  cosmos20_PAH_dithered_3cats.toml  cosmos20_PAH_dithered_3pop.toml  cosmos20_PAH_dithered_3pop_3cats.toml  cosmos25.toml  cosmos25_CII_sigma_sfr.toml  cosmos25_PAH_dithered.toml  cosmos25_PAH_dithered_3cats.toml  cosmos25_PAH_dithered_3d.toml  cosmos25_fixed.toml  cosmos25_luv.toml  cosmos25_luv_beta.toml  cosmos25_luv_beta_phot.toml  cosmos25_mass_beta_phot.toml  cosmos25_mass_metallicity.toml  cosmos25_mass_sigma_sfr.toml  cosmos25_nuvrj_direct.toml  cosmos25_sigma_sfr.toml  cosmos25_sigma_sfr_delta_ms.toml  cosmos25_sigma_sfr_dithered.toml  cosmos25_uvj_direct.toml  example.toml  uvista.toml
config/catalog/: agrawal2026.toml  cosmos25_PAH_dithered_3d.toml  defaults.toml  parente2026.toml  wijesekera2026.toml
docs/: CATALOG_PREP.md  forecast-lim-via-pah-1-brief.md  forecast-lim-via-pah-1-systematics.md  pah-forward-model-10-brief.md  pah-forward-model-10-summary.md  pah-forward-model-11-summary.md  pah-forward-model-2-summary.md  pah-forward-model-3-brief.md  pah-forward-model-4-brief.md  pah-forward-model-5-brief.md  pah-forward-model-5-summary.md  pah-forward-model-6-brief.md  pah-forward-model-6-letter-draft.html  pah-forward-model-6-summary.md  pah-forward-model-7-brief.md  pah-forward-model-7-summary.md  pah-forward-model-8-brief.md  pah-forward-model-9-brief.md  pah-interpretation-1-brief.md  pah-interpretation-candidates.md  pah-letter-draft-1-brief.md  pah-refs.md
examples/: basic_usage.py
notebooks/: 2025-06-08-load-cosmos25-stacking-results-v1.ipynb  2025-06-13-test-simstack4-on-simulated-catalog-and-maps-correct-true-fluxes.ipynb  2025-06-20-load-json-fit-seds.ipynb  2025-06-22-diagnose-uvrj-splitting-code.ipynb  2025-07-01-compare-simstack3-to-simstack4-fluxes-and-luminosities.ipynb  2025-07-06-load-json-fit-seds.ipynb  2025-07-19-export-irx-beta.ipynb  build_lim_via_pah_2026-07-12_notebook.py  build_pah_evolving_mcmc_notebook.py  build_pah_fig1.py  build_pah_fig2.py  build_pah_fig3.py  build_pah_money_plots_2026-07-10_notebook.py  build_pah_money_plots_notebook.py  build_two_arms_tests_2026-07-11_notebook.py
src/simstack4/: __init__.py  algorithm.py  analyze_cii_excess.py  analyze_cii_lines.py  analyze_pah.py  analyze_warm_dust.py  bin_optimizer.py  cli.py  compare_wien_modes.py  config.py  cosmology.py  cosmos.py  dust_evolution.py  greybody.py  optimize_mass_bins.py  pah_bandpass.py  pah_dither.py  pah_model.py  pah_spectrum.py  plots.py  populations.py  preflight.py  results.py  sed_fitting.py  serialization.py  sky_catalogs.py  sky_maps.py  toolbox.py  utils.py  wrapper.py  wrapper_old2.py
src/simstack4/exceptions/: __init__.py  simstack_exceptions.py
src/simstack4/scripts/: analyze_results.py  clean_cosmos_merger.py  clean_cosmos_sersic.py  clean_cosmos_wijesekera.py  clean_cosmos_wijesekera_phot.py  cli_stacking_script.py  cosmos25_source_extractor.py  cosmos_analysis.py  cosmos_farmer_stacking.py  cosmos_stacking.py  cosmos_stacking_clean.py  cosmos_stacking_luv.py  pah_dither_endtoend.py  (+6 more)
test_data/: test_catalog.csv  test_config.toml
tests/: test_basic.py  test_dust_evolution_recovery.py  test_gram_per_bin.py  test_integration.py  test_luminosity.py  test_pah_bayesian_recovery.py  test_pah_dither_strategy.py  test_pah_endtoend.py  test_pah_evolution_recovery.py  test_pah_shared_baseline.py  test_pah_spectrum_recovery.py  test_per_bin_errors.py  test_per_bin_errors_deep_dive.py  test_preflight.py  test_sed_fitting.py  test_stacking_recovery.py
(+3 files in other folders)
